--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8==6.0.0 pip uninstall flake8-isort pip install flake8 isort
+          pip install flake8==6.0.0 pip flake8-isort==6.0.0
       - name: Test with flake8
-        run: python -m flake8 backend/
+        run: python -m flake8 .
